Correct margins in landing footer on mobile

--- a/themes/documentation/css/main.css
+++ b/themes/documentation/css/main.css
@@ -1421,6 +1421,10 @@ Version: 1.0
     .HomepageContent {
         padding: 0;
     }
+
+    footer {
+        margin-bottom: 40px;
+    }
   }
 
   @media only screen and (max-width:375px) {
